kubernetes-manifestefile3/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etudiant-back-deployment1
  labels:
    app: etudiant-back-deployment1
    type: backend
spec:
  selector:
    matchLabels:
      app: etudiant-backend1
      type: backend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: etudiant-backend1
        type: backend
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: etudiant-backend1
          image: brims15/backendgestionetudiant:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "256Mi"
              cpu: "528m"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
