kubernetes-manifestefile3/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etudiant-frontend-deployment
  labels:
    app: etudiant-frontend-deployment
    type: front
spec:
  selector:
    matchLabels:
      app: etudiant-front1
      type: front
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: etudiant-front1
        type: front
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: etudiant-front1
          image: brims15/frontgestionetudiant:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          resources:
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "256Mi"
              cpu: "528m"
              #---------------------------------#
          ports:
            - name: api
              containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
