kubernetes-manifestefile3/service-backend-etudiant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend-etudiant
spec:
  selector:
    app: etudiant-backend1
    type: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http-backend
