kubernetes-manifestefile3/virtualServiceFront.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-gestionetudiant-frontend
spec:
  hosts:
  - "*"
  gateways:
  - gestionetudiant-gateway
  http:
  - name: frontend-vs
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: service-frontend-etudiant
        port:
          number: 8080
